{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 436,
  "lineage": "f82ded45-62cc-7dc2-048e-868f362785ce",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkInterfaces/nic-demo-test-westeurope-001",
            "internal_domain_name_suffix": "zgherrgse2wuxdx4janfyjy2jc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nicipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/publicIPAddresses/pip-demo-test-westeurope-001",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001/subnets/snet-demo-test-westeurope-001"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-7F-BA-F7",
            "name": "nic-demo-test-westeurope-001",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-demo-test-westeu-001",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Compute/virtualMachines/vm-demo-test-westeurope-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_public_ip.pip-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001",
            "azurerm_subnet.snet-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001",
            "location": "westeurope",
            "name": "nsg-demo-test-westeurope-001",
            "resource_group_name": "rg-demo-test-westeu-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow22",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "88.120.30.227",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow443",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "tf-demo"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001/securityRules/Allow22",
            "name": "Allow22",
            "network_security_group_name": "nsg-demo-test-westeurope-001",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "rg-demo-test-westeu-001",
            "source_address_prefix": "88.120.30.227",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port443",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001/securityRules/Allow443",
            "name": "Allow443",
            "network_security_group_name": "nsg-demo-test-westeurope-001",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-demo-test-westeu-001",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001/securityRules/Allow80",
            "name": "Allow80",
            "network_security_group_name": "nsg-demo-test-westeurope-001",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-demo-test-westeu-001",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/publicIPAddresses/pip-demo-test-westeurope-001",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.55.163",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-demo-test-westeurope-001",
            "resource_group_name": "rg-demo-test-westeu-001",
            "sku": "Basic",
            "tags": {
              "env": "tf-demo"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001/subnets/snet-demo-test-westeurope-001",
            "name": "snet-demo-test-westeurope-001",
            "resource_group_name": "rg-demo-test-westeu-001",
            "virtual_network_name": "vnet-demo-test-westeurope-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001",
            "azurerm_virtual_network.vnet-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001/subnets/snet-demo-test-westeurope-001",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001/subnets/snet-demo-test-westeurope-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-demo-test-westeurope-001",
            "azurerm_resource_group.rg-demo-test-westeurope-001",
            "azurerm_subnet.snet-demo-test-westeurope-001",
            "azurerm_virtual_network.vnet-demo-test-westeurope-001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-demo-test-westeurope-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "c4488ec9-27d2-4b2d-8efe-481a5c271c4a",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001",
            "location": "westeurope",
            "name": "vnet-demo-test-westeurope-001",
            "resource_group_name": "rg-demo-test-westeu-001",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/virtualNetworks/vnet-demo-test-westeurope-001/subnets/snet-demo-test-westeurope-001",
                "name": "snet-demo-test-westeurope-001",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/rg-demo-test-westeu-001/providers/Microsoft.Network/networkSecurityGroups/nsg-demo-test-westeurope-001"
              }
            ],
            "tags": {
              "env": "tf-demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-demo-test-westeurope-001"
          ]
        }
      ]
    }
  ]
}